examples/scenarios/21-var-redeclaration-edge-cases/error-let-const.mncnk
chunk "Main" {
  let a: int = 1;
  const a: int = 2; // error: redeclaration in the same scope
};
moon(Main);
